chore: update file directory

--- a/src/automatic-rowspan/style.css
+++ b/src/automatic-rowspan/style.css
@@ -8,7 +8,7 @@
   border: var(--border);
   border-right: var(--border);
   box-sizing: border-box;
-  border-top: unset;
+  border-top: var(--border);
 }
 
 .cell-span-leaf {
